feat(api)!: enroll users through email invitations
